refactor: move replacement logic to ReplacementModule and remove duplicated modules