@@ -3,9 +3,8 @@ package net.flectone.pulse.platform.formatter;
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
 
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 
 @Singleton
 public class UrlFormatter {
@@ -18,8 +17,8 @@ public class UrlFormatter {
         if (stringUrl == null || stringUrl.isBlank()) return "";
 
         try {
-            return new URL(stringUrl).toURI().toASCIIString();
-        } catch (MalformedURLException | URISyntaxException e) {
+            return new URI(stringUrl).toASCIIString();
+        } catch (URISyntaxException e) {
             return "";
         }
     }
